--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ SamsungSW/SamsungSW.vcxproj
 SamsungSW/SamsungSW.vcxproj.filters
 SamsungSW/SamsungSW.vcxproj.user
 SamsungSW/x64/
+
+
+SamsungSW.exe
+SamsungSW.pdb
